# Lox

./: .gitignore  Cargo.toml  README.md
src/: env.rs  error.rs  expression.rs  function.rs  interpreter.rs  lib.rs  list.rs  logger.rs  loxclass.rs  loxer.rs  main.rs  object.rs  parser.rs  resolver.rs  scanner.rs  statement.rs  token.rs  utils.rs
tests/: integration.rs
tests/integration/: helloworld.lox
tests/integration/class/: method.lox  outside_this.lox  set.lox  this.lox
tests/integration/constructor/: init_early_return.lox
tests/integration/for/: fib.lox  for.lox
tests/integration/function/: closure.lox  count.lox  extra_argument.lox  fib.lox
tests/integration/inheritance/: inheritance.lox
tests/integration/list/: list.lox  modify.lox  string_list.lox
tests/integration/print/: print.lox
tests/integration/return/: after_else.lox  at_top_level.lox  return_nil.lox
tests/integration/string/: index.lox  out_of_range.lox  slice.lox  slice_of_slice.lox
tests/integration/super/: closure.lox
tests/integration/this/: nested_class.lox  this_in_toplevel.lox
tests/integration/var/: assign.lox  duplicate_var.lox  early_bound.lox  var.lox
