[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
pretty_env_logger = "0.5"
enum-display-derive = "0.1.1"
rustyline = "15.0.0"

test-generator = "^0.3"
regex = "1.5.4"